src/test/deca/context/valid/inheritance/instanceof_valid_1.deca
// Description :
//    Utilisation valide de l'opérateur instanceof.
//
// Resultats :
//    OK

class A {
}

class B extends A {
}

{
    A a = new B();
    if (a instanceof B) {
        println("ok");
    }
}

