src/test/deca/context/invalid/avecObjet/is_instance_of_rvalue.deca
// Description :
//    opérateur instanceof avec rvalue invalide (boolean)
//
// Resultats :
//    Erreur contextuelle
//    Ligne 12 : Le deuxième argument d'instanceof doit être une classe

class A {}

{
    A a = new A();
    if (a instanceof boolean) { // ERREUR
        println("erreur");
    }
}